whitespace under footer now fixed

--- a/web/client/stylesheets/pages/landing.scss
+++ b/web/client/stylesheets/pages/landing.scss
@@ -198,7 +198,7 @@ p {
 	display: table;
 	width: 100%;
 	.layover{
-		height:100%;
+		height:100vh;
 		// background-color: white;
 		opacity: 0.8;
 		display: table-cell;
